upd water-rate
